# cake

./: .clang-format  .gitignore  CMakeLists.txt  Cake.toml  Doxyfile  Makefile  README.md  build.sh  cake  cake.cc  cake.h  cake.hpp  common.cc  file_api.cc  file_api.h  helper.h  log.h
docs/: cake_build.md  cake_create.md  cake_debug.md  cake_docs.md  cake_install.md  cake_manifest.md  cake_run.md
include/: cake.h  cmake_options_mapper.h  common.h  log.h
include/cmake/: ctest.h  file_api.h
include/log/: log.h
include/manifest/: manifest.h
include/term/: color.h  style.h  text.h
include/utility/: common.h
src/: CMakeLists.txt  cake.cc  cmake_options_mapper.cc  common.cc  file_api.cc  log.cc
src/cmake/: file_api.cc
src/log/: log.cc
src/manifest/: manifest.cc
src/utility/: common.cc
template/basic/: .gitignore  Cake.toml  Doxyfile  README.md
template/basic/src/: CMakeLists.txt  basic.cc
template/module/: CMakeLists.txt  Cake.toml  Doxyfile
template/module/src/: CMakeLists.txt  TheModule.cpp
template/module/src/modules/: TheModule.cpp
template/vcpkg/: .gitmodules  CMakeLists.txt  Cake.toml  Doxyfile
template/vcpkg/src/: CMakeLists.txt  vcpkg.cc
